--- a/book/publishBackend/package.json
+++ b/book/publishBackend/package.json
@@ -19,6 +19,7 @@
     "i18n": "*",
     "lodash": "^4.17.19",
     "log4js": "^0.6.38",
+    "minio": "^7.0.16",
     "moment": "^2.24.0",
     "node-rsa": "^0.4.2",
     "node-schedule": "^1.3.2",
