--- a/book/readBackend/package.json
+++ b/book/readBackend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": ">=1.0.0",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "*",
@@ -16,8 +17,9 @@
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "i18n": "*",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "log4js": "^0.6.38",
+    "minio": "^7.0.16",
     "moment": "^2.24.0",
     "node-rsa": "^0.4.2",
     "node-schedule": "^1.3.2",
