--- a/book/publishBackend/package.json
+++ b/book/publishBackend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "i18n": "*",
+    "iconv-lite": "^0.6.2",
     "lodash": "^4.17.19",
     "log4js": "^0.6.38",
     "minio": "^7.0.16",
