--- a/book/readFrontend/package.json
+++ b/book/readFrontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": ">=1.0.0",
+    "cheerio": "^1.0.0-rc.5",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "*",
@@ -18,6 +19,7 @@
     "i18n": "*",
     "lodash": "^4.17.15",
     "log4js": "^0.6.38",
+    "minio": "^7.0.18",
     "moment": "^2.24.0",
     "node-rsa": "^0.4.2",
     "node-schedule": "^1.3.2",
