--- a/book/readFrontend/package.json
+++ b/book/readFrontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": ">=1.0.0",
     "cheerio": "^1.0.0-rc.5",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "*",
