--- a/book/mossServer/package.json
+++ b/book/mossServer/package.json
@@ -10,7 +10,6 @@
     "body-parser": ">=1.0.0",
     "cheerio": "^1.0.0-rc.10",
     "compressing": "^1.5.1",
-    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "*",
@@ -19,9 +18,10 @@
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "i18n": "*",
+    "iconv-lite": "^0.6.2",
     "lodash": "^4.17.21",
     "log4js": "^0.6.38",
-    "minio": "^7.0.18",
+    "minio": "^7.0.16",
     "moment": "^2.24.0",
     "node-rsa": "^0.4.2",
     "node-schedule": "^1.3.2",
