--- a/picture/publishBackend/package.json
+++ b/picture/publishBackend/package.json
@@ -7,8 +7,9 @@
     "start": "node --debug ./app.js"
   },
   "dependencies": {
+    "ali-oss": "^6.16.0",
     "body-parser": ">=1.0.0",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "ejs": "*",
@@ -18,7 +19,7 @@
     "express-session": "^1.16.1",
     "i18n": "*",
     "iconv-lite": "^0.6.2",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "log4js": "^0.6.38",
     "minio": "^7.0.16",
     "moment": "^2.24.0",
